--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -1,7 +1,7 @@
 
 form.confirm.cancel           = \u041E\u0442\u043C\u0435\u043D\u0430
 form.filter.group             = \u0413\u0440\u0443\u043F\u043F\u044B
-form.filter.list              = \u0421\u043F\u0438\u0441\u043E\u043A
+form.filter.list              = \u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0435
 form.login.button             = \u0412\u043E\u0439\u0442\u0438
 form.login.lazy.wait          = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u043E\u0434\u043E\u0436\u0434\u0438\u0442\u0435..
 form.login.login.label        = \u041B\u043E\u0433\u0438\u043D
@@ -164,7 +164,7 @@ form.ptrn.message.save                  = \u0421\u043E\u0445\u0440\u0430\u043D\u
 form.ptrn.message.subject               = \u0422\u0435\u043C\u0430:
 form.ptrn.message.subject.prompt        = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0442\u0435\u043C\u0443..
 form.ptrn.poll.add                      = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
-form.ptrn.poll.create                   = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0448\u0430\u0431\u043B\u043E\u043D
+form.ptrn.poll.create                   = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 form.ptrn.poll.edit                     = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0435 \u0440\u0430\u043D\u0435\u0435:
 form.ptrn.poll.prompt                   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u043E\u043F\u0440\u043E\u0441..
 form.ptrn.poll.save                     = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
@@ -189,22 +189,14 @@ head.msgr.poll.window.pattern = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435
 head.msgr.polls               = \u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u044B \u043E\u043F\u0440\u043E\u0441\u043E\u0432
 head.msgr.requests            = \u0417\u0430\u044F\u0432\u043A\u0438
 head.ptrn.message             = \u0428\u0430\u0431\u043B\u043E\u043D\u044B \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0439
-head.ptrn.poll                = \u0428\u0430\u0431\u043B\u043E\u043D\u044B \u043E\u043F\u0440\u043E\u0441\u043E\u0432
+head.ptrn.poll                = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
 head.ptrn.style               = \u0421\u0442\u0438\u043B\u0438 \u043F\u043E\u0438\u0441\u043A\u0430 \u0448\u0430\u0431\u043B\u043E\u043D\u043E\u0432
 head.ptrn.window.folder       = \u041F\u0430\u043F\u043A\u0438 \u0448\u0430\u0431\u043B\u043E\u043D\u043E\u0432
 head.window.template          = \u0428\u0430\u0431\u043B\u043E\u043D\u044B \u043E\u043F\u0440\u043E\u0441\u043E\u0432
 
-menu.msgr          = \u0410\u0434\u0440\u0435\u0441 \u043B\u043E\u043A\u0430\u0446\u0438\u0438
-menu.msgr.history  = \u0414\u043E\u0441\u043A\u0430 \u043E\u0431\u044A\u044F\u0432\u043B\u0435\u043D\u0438\u0439
-menu.msgr.in       = \u041E\u0442\u0437\u044B\u0432\u044B
-menu.msgr.out      = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F
-menu.msgr.poll     = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u043F\u0440\u043E\u0441
-menu.msgr.polls    = \u041E\u043F\u0440\u043E\u0441\u044B
-menu.msgr.requests = \u0417\u0430\u044F\u0432\u043A\u0438
-menu.ptrn          = \u0428\u0430\u0431\u043B\u043E\u043D\u044B
-menu.ptrn.message  = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F
-menu.ptrn.poll     = \u041E\u043F\u0440\u043E\u0441\u044B
-menu.ptrn.style    = \u0421\u0442\u0438\u043B\u0438
+menu.msgr          = \u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
+menu.msgr.in       = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
+menu.msgr.out      = \u0428\u0430\u0431\u043B\u043E\u043D\u044B
 
 noti.msgr.attributes.floors.empty       = \u0421\u043F\u0438\u0441\u043E\u043A \u044D\u0442\u0430\u0436\u0435\u0439, \u0441\u043E\u043E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0443\u044E\u0449\u0438\u0445 \u0444\u0438\u043B\u044C\u0442\u0440\u0443, \u043F\u0443\u0441\u0442
 noti.msgr.attributes.porches.empty      = \u0421\u043F\u0438\u0441\u043E\u043A \u043F\u043E\u0434\u044A\u0435\u0437\u0434\u043E\u0432 \u043F\u0443\u0441\u0442
