--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -129,7 +129,7 @@ form.msgr.poll.custom                   = \u041F\u0440\u0435\u0434\u043B\u043E\u
 form.msgr.poll.custom.label             = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A:
 form.msgr.poll.expiration               = \u0410\u043A\u0442\u0443\u0430\u043B\u044C\u043D\u043E \u043F\u043E:
 form.msgr.poll.multiply                 = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044C \u0432\u044B\u0431\u043E\u0440 \u043D\u0435\u0441\u043A\u043E\u043B\u044C\u043A\u0438\u0445 \u0432\u0430\u0440\u0438\u0430\u043D\u0442\u043E\u0432
-form.msgr.poll.question                 = \u0412\u043E\u043F\u0440\u043E\u0441:
+form.msgr.poll.question                 = \u0428\u0430\u0431\u043B\u043E\u043D:
 form.msgr.poll.question.prompt          = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0442\u0435\u043A\u0441\u0442 \u0432\u043E\u043F\u0440\u043E\u0441\u0430..
 form.msgr.poll.recipient                = \u041A\u043E\u043C\u0443:
 form.msgr.poll.recipient.grouping.floor = \u0412\u0430\u043C\u0438 \u0443\u0436\u0435 \u0432\u044B\u0431\u0440\u0430\u043D\u044B \u043D\u0435\u043A\u043E\u0442\u043E\u0440\u044B\u0435 \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u0438 <b>\u042D\u0442\u0430\u0436\u0430 {0}</b>.<br />\u0421\u0433\u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u0435\u0439 \u043F\u043E \u044D\u0442\u0430\u0436\u0443?
@@ -166,7 +166,7 @@ form.ptrn.message.subject.prompt        = \u0412\u0432\u0435\u0434\u0438\u0442\u
 form.ptrn.poll.add                      = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 form.ptrn.poll.create                   = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 form.ptrn.poll.edit                     = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0435 \u0440\u0430\u043D\u0435\u0435:
-form.ptrn.poll.prompt                   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u043E\u043F\u0440\u043E\u0441..
+form.ptrn.poll.prompt                   = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u0430\u0431\u043B\u043E\u043D..
 form.ptrn.poll.save                     = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 form.ptrn.style.list                    = \u0421\u043F\u0438\u0441\u043E\u043A
 form.ptrn.style.list.description        = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F \u0438 \u043E\u043F\u0440\u043E\u0441\u044B \u0432\u044B\u0432\u043E\u0434\u044F\u0442\u0441\u044F \u0435\u0434\u0438\u043D\u044B\u043C \u0441\u043F\u0438\u0441\u043A\u043E\u043C, \u043E\u0442\u0441\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u043C \u043F\u043E \u0430\u043B\u0444\u0430\u0432\u0438\u0442\u0443.
