--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -21,8 +21,15 @@ form.request.status.active    = \u0410\u043A\u0442\u0438\u0432\u043D\u0430
 form.request.status.approved  = \u041F\u0440\u0438\u043D\u044F\u0442\u0430
 form.request.status.cancelled = \u041E\u0442\u043C\u0435\u043D\u0435\u043D\u0430
 form.request.status.inactive  = \u041D\u0435\u0430\u043A\u0442\u0438\u0432\u043D\u0430
+form.strings.up               = \u0412\u0432\u0435\u0440\u0445
+form.strings.down             = \u0412\u043D\u0438\u0437
 form.strings.close            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
-form.strings.prompt           = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0442\u0435\u043A\u0441\u0442..
+form.strings.prompt           = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044F..
+form.strings.label.prompt     = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043C\u0435\u0442\u043A\u0443 \u043F\u043E\u043B\u044F..
+form.strings.type.prompt      = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043F\u0430 \u043F\u043E\u043B\u044F..
+form.strings.type.line        = \u0421\u0442\u0440\u043E\u043A\u0430
+form.strings.type.area        = \u0422\u0435\u043A\u0441\u0442
+form.strings.type.checkbox    = \u0424\u043B\u0430\u0433
 
 head.footer.copyright    = 2015 - {0} \u041E\u041E\u041E "\u041B\u0410\u0411\u041E\u0420\u0410\u0422\u041E\u0420\u0418\u042F \u041E\u041D\u0415\u0413\u041E" info@onegolabs.com
 head.registration.window = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
@@ -127,6 +134,7 @@ form.msgr.poll.choice.custom.prompt     = \u0412\u0432\u0435\u0434\u0438\u0442\u
 form.msgr.poll.choice.new.prompt        = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0432\u0430\u0440\u0438\u0430\u043D\u0442 \u043E\u0442\u0432\u0435\u0442\u0430..
 form.msgr.poll.custom                   = \u041F\u0440\u0435\u0434\u043B\u043E\u0436\u0438\u0442\u044C \u0441\u0432\u043E\u0431\u043E\u0434\u043D\u044B\u0439 \u0432\u0430\u0440\u0438\u0430\u043D\u0442 \u043E\u0442\u0432\u0435\u0442\u0430
 form.msgr.poll.custom.label             = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A:
+form.msgr.poll.fields.label             = \u041F\u043E\u043B\u044F:
 form.msgr.poll.expiration               = \u0410\u043A\u0442\u0443\u0430\u043B\u044C\u043D\u043E \u043F\u043E:
 form.msgr.poll.multiply                 = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044C \u0432\u044B\u0431\u043E\u0440 \u043D\u0435\u0441\u043A\u043E\u043B\u044C\u043A\u0438\u0445 \u0432\u0430\u0440\u0438\u0430\u043D\u0442\u043E\u0432
 form.msgr.poll.question                 = \u0428\u0430\u0431\u043B\u043E\u043D:
@@ -188,7 +196,7 @@ head.msgr.poll.window.confirm = \u0413\u0440\u0443\u043F\u043F\u0438\u0440\u043E
 head.msgr.poll.window.pattern = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u0430\u0431\u043B\u043E\u043D \u0434\u043B\u044F \u043E\u043F\u0440\u043E\u0441\u0430
 head.msgr.polls               = \u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u044B \u043E\u043F\u0440\u043E\u0441\u043E\u0432
 head.msgr.requests            = \u0417\u0430\u044F\u0432\u043A\u0438
-head.ptrn.message             = \u0428\u0430\u0431\u043B\u043E\u043D\u044B \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0439
+head.ptrn.message             = \u0428\u0430\u0431\u043B\u043E\u043D\u044B \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
 head.ptrn.poll                = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
 head.ptrn.style               = \u0421\u0442\u0438\u043B\u0438 \u043F\u043E\u0438\u0441\u043A\u0430 \u0448\u0430\u0431\u043B\u043E\u043D\u043E\u0432
 head.ptrn.window.folder       = \u041F\u0430\u043F\u043A\u0438 \u0448\u0430\u0431\u043B\u043E\u043D\u043E\u0432
