--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -24,9 +24,9 @@ form.request.status.inactive  = \u041D\u0435\u0430\u043A\u0442\u0438\u0432\u043D
 form.strings.up               = \u0412\u0432\u0435\u0440\u0445
 form.strings.down             = \u0412\u043D\u0438\u0437
 form.strings.close            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
-form.strings.prompt           = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044F..
-form.strings.label.prompt     = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043C\u0435\u0442\u043A\u0443 \u043F\u043E\u043B\u044F..
-form.strings.type.prompt      = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043F\u0430 \u043F\u043E\u043B\u044F..
+form.strings.prompt           = \u0418\u043C\u044F \u043F\u043E\u043B\u044F..
+form.strings.label.prompt     = \u041C\u0435\u0442\u043A\u0430 \u043F\u043E\u043B\u044F..
+form.strings.type.prompt      = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043F..
 form.strings.type.line        = \u0421\u0442\u0440\u043E\u043A\u0430
 form.strings.type.area        = \u0422\u0435\u043A\u0441\u0442
 form.strings.type.checkbox    = \u0424\u043B\u0430\u0433
