--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -26,12 +26,13 @@ form.strings.down             = \u0412\u043D\u0438\u0437
 form.strings.close            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 form.strings.prompt           = \u0418\u043C\u044F \u043F\u043E\u043B\u044F..
 form.strings.label.prompt     = \u041C\u0435\u0442\u043A\u0430 \u043F\u043E\u043B\u044F..
-form.strings.type.prompt      = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043F..
+form.strings.type.prompt      = \u0422\u0438\u043F \u043F\u043E\u043B\u044F..
 form.strings.type.line        = \u0421\u0442\u0440\u043E\u043A\u0430
 form.strings.type.area        = \u0422\u0435\u043A\u0441\u0442
 form.strings.type.checkbox    = \u0424\u043B\u0430\u0433
 
-head.footer.copyright    = 2015 - {0} \u041E\u041E\u041E "\u041B\u0410\u0411\u041E\u0420\u0410\u0422\u041E\u0420\u0418\u042F \u041E\u041D\u0415\u0413\u041E" info@onegolabs.com
+head.footer.copyright    = 2016 \u0412\u044F\u0447\u0435\u0441\u043B\u0430\u0432 \u041A\u043B\u0430\u043F\u0430\u0442\u043D\u044E\u043A klapatnyuk@yandex.ru
+head.footer.production   = \u00A9 {0}
 head.registration.window = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 head.window.login        = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
 head.window.login.lazy   = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
@@ -134,7 +135,7 @@ form.msgr.poll.choice.custom.prompt     = \u0412\u0432\u0435\u0434\u0438\u0442\u
 form.msgr.poll.choice.new.prompt        = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0432\u0430\u0440\u0438\u0430\u043D\u0442 \u043E\u0442\u0432\u0435\u0442\u0430..
 form.msgr.poll.custom                   = \u041F\u0440\u0435\u0434\u043B\u043E\u0436\u0438\u0442\u044C \u0441\u0432\u043E\u0431\u043E\u0434\u043D\u044B\u0439 \u0432\u0430\u0440\u0438\u0430\u043D\u0442 \u043E\u0442\u0432\u0435\u0442\u0430
 form.msgr.poll.custom.label             = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A:
-form.msgr.poll.fields.label             = \u041F\u043E\u043B\u044F:
+form.msgr.poll.fields.label             = \u0422\u0435\u043B\u043E \u0448\u0430\u0431\u043B\u043E\u043D\u0430:
 form.msgr.poll.expiration               = \u0410\u043A\u0442\u0443\u0430\u043B\u044C\u043D\u043E \u043F\u043E:
 form.msgr.poll.multiply                 = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044C \u0432\u044B\u0431\u043E\u0440 \u043D\u0435\u0441\u043A\u043E\u043B\u044C\u043A\u0438\u0445 \u0432\u0430\u0440\u0438\u0430\u043D\u0442\u043E\u0432
 form.msgr.poll.question                 = \u0428\u0430\u0431\u043B\u043E\u043D:
@@ -166,14 +167,14 @@ form.ptrn.folder.set                    = \u041E\u0431\u0437\u043E\u0440
 form.ptrn.message.add                   = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 form.ptrn.message.body                  = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435:
 form.ptrn.message.create                = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0448\u0430\u0431\u043B\u043E\u043D
-form.ptrn.message.edit                  = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0435 \u0440\u0430\u043D\u0435\u0435:
+form.ptrn.message.edit                  = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B:
 form.ptrn.message.prompt                = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435..
 form.ptrn.message.save                  = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 form.ptrn.message.subject               = \u0422\u0435\u043C\u0430:
 form.ptrn.message.subject.prompt        = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0442\u0435\u043C\u0443..
 form.ptrn.poll.add                      = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 form.ptrn.poll.create                   = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-form.ptrn.poll.edit                     = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0435 \u0440\u0430\u043D\u0435\u0435:
+form.ptrn.poll.edit                     = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0448\u0430\u0431\u043B\u043E\u043D\u044B:
 form.ptrn.poll.prompt                   = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u0430\u0431\u043B\u043E\u043D..
 form.ptrn.poll.save                     = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 form.ptrn.style.list                    = \u0421\u043F\u0438\u0441\u043E\u043A
@@ -184,7 +185,7 @@ form.ptrn.style.tree                    = \u0414\u0435\u0440\u0435\u0432\u043E \
 form.ptrn.style.tree.description        = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F \u0438 \u043E\u043F\u0440\u043E\u0441\u044B \u0445\u0440\u0430\u043D\u044F\u0442\u0441\u044F \u0432 \u043F\u0430\u043F\u043A\u0430\u0445. \u041F\u0430\u043F\u043A\u0438 \u0441\u043E\u0437\u0434\u0430\u044E\u0442\u0441\u044F \u043E\u0442\u0434\u0435\u043B\u044C\u043D\u043E.
 form.ptrn.tags                          = \u0422\u0435\u0433\u0438:
 
-head.app                      = \u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u044C \u0423\u041A
+head.app                      = \u0421\u0431\u0435\u0440\u0431\u0430\u043D\u043A \u0422\u0435\u0445\u043D\u043E\u043B\u043E\u0433\u0438\u0438 | \u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
 head.msgr.history             = \u0414\u043E\u0441\u043A\u0430 \u043E\u0431\u044A\u044F\u0432\u043B\u0435\u043D\u0438\u0439
 head.msgr.in                  = \u041E\u0442\u0437\u044B\u0432\u044B
 head.msgr.out.advert          = \u041D\u043E\u0432\u043E\u0435 \u043E\u0431\u044A\u044F\u0432\u043B\u0435\u043D\u0438\u0435
