--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -174,6 +174,8 @@ form.ptrn.message.subject               = \u0422\u0435\u043C\u0430:
 form.ptrn.message.subject.prompt        = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0442\u0435\u043C\u0443..
 form.ptrn.poll.add                      = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 form.ptrn.poll.create                   = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+form.ptrn.poll.clear                    = \u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C
+form.ptrn.poll.cancel                   = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
 form.ptrn.poll.edit                     = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0448\u0430\u0431\u043B\u043E\u043D\u044B:
 form.ptrn.poll.prompt                   = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u0430\u0431\u043B\u043E\u043D..
 form.ptrn.poll.save                     = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
