'form' i18n keys naming refactoring

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -3,31 +3,31 @@
 form.login.button=\u0412\u043E\u0439\u0442\u0438
 form.login.login.label=\u041B\u043E\u0433\u0438\u043D
 form.login.password.label=\u041F\u0430\u0440\u043E\u043B\u044C
-form.profile.logout=\u0412\u044B\u0439\u0442\u0438
-form.profile.status=\u0412\u0445\u043E\u0434 \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D\:
-form.strings.up=\u0412\u0432\u0435\u0440\u0445
-form.strings.down=\u0412\u043D\u0438\u0437
-form.strings.close=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
-form.strings.prompt=\u0418\u043C\u044F \u043F\u043E\u043B\u044F..
-form.strings.label.prompt=\u041C\u0435\u0442\u043A\u0430 \u043F\u043E\u043B\u044F..
-form.strings.type.prompt=\u0422\u0438\u043F \u043F\u043E\u043B\u044F..
-form.strings.type.line=\u0421\u0442\u0440\u043E\u043A\u0430
-form.strings.type.area=\u0422\u0435\u043A\u0441\u0442
-form.strings.type.checkbox=\u0424\u043B\u0430\u0433
-form.msgr.poll.choice.custom.prompt=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A..
-form.msgr.poll.custom.label=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A:
-form.msgr.poll.fields.label=\u0422\u0435\u043B\u043E \u0448\u0430\u0431\u043B\u043E\u043D\u0430:
-form.msgr.poll.question=\u0428\u0430\u0431\u043B\u043E\u043D:
-form.ptrn.message.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0448\u0430\u0431\u043B\u043E\u043D
-form.ptrn.message.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B:
-form.ptrn.poll.add=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
-form.ptrn.poll.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-form.ptrn.poll.clear=\u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C
-form.ptrn.poll.cancel=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
-form.ptrn.poll.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
-form.ptrn.poll.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0448\u0430\u0431\u043B\u043E\u043D\u044B:
-form.ptrn.poll.prompt=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u0430\u0431\u043B\u043E\u043D..
-form.ptrn.poll.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+form.profile.logout.button=\u0412\u044B\u0439\u0442\u0438
+form.profile.status.label=\u0412\u0445\u043E\u0434 \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D:
+form.field.up=\u0412\u0432\u0435\u0440\u0445
+form.field.down=\u0412\u043D\u0438\u0437
+form.field.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+form.field.title.prompt=\u0418\u043C\u044F \u043F\u043E\u043B\u044F..
+form.field.label.prompt=\u041C\u0435\u0442\u043A\u0430 \u043F\u043E\u043B\u044F..
+form.field.type.prompt=\u0422\u0438\u043F \u043F\u043E\u043B\u044F..
+form.field.type.line=\u0421\u0442\u0440\u043E\u043A\u0430
+form.field.type.area=\u0422\u0435\u043A\u0441\u0442
+form.field.type.checkbox=\u0424\u043B\u0430\u0433
+form.entity.title.prompt=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A..
+form.entity.title.label=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A:
+form.template.fields.label=\u0422\u0435\u043B\u043E \u0448\u0430\u0431\u043B\u043E\u043D\u0430:
+form.document.template.label=\u0428\u0430\u0431\u043B\u043E\u043D:
+form.template.create.new.button=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0448\u0430\u0431\u043B\u043E\u043D
+form.document.edit.label=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B:
+form.entity.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
+form.document.create.new.button=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+form.entity.clear=\u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C
+form.entity.cancel=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
+form.entity.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+form.template.edit.label=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0448\u0430\u0431\u043B\u043E\u043D\u044B:
+form.document.template.prompt=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u0430\u0431\u043B\u043E\u043D..
+form.entity.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 
 # head
 
