--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings_ru.properties
@@ -4,7 +4,7 @@ form.login.button=\u0412\u043E\u0439\u0442\u0438
 form.login.login.label=\u041B\u043E\u0433\u0438\u043D
 form.login.password.label=\u041F\u0430\u0440\u043E\u043B\u044C
 form.profile.logout.button=\u0412\u044B\u0439\u0442\u0438
-form.profile.status.label=\u0412\u0445\u043E\u0434 \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D:
+form.profile.status.label=\u0412\u0445\u043E\u0434 \u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D\:
 form.field.up=\u0412\u0432\u0435\u0440\u0445
 form.field.down=\u0412\u043D\u0438\u0437
 form.field.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
